<resources>
    <string name="app_name">WallpaperApp</string>
    <string name="nature">Nature</string>
    <string name="woman">Woman</string>
    <string name="_4k">4k</string>
    <string name="animals">Animals</string>
    <string name="fashion">Fashion</string>
    <string name="beautiful">Beautiful</string>
    <string name="flowers">Flowers</string>
    <string name="cars">Cars</string>
    <string name="search_for_wallpapers">Search for wallpapers</string>
</resources>